Load English map messages.

--- a/meson.build
+++ b/meson.build
@@ -13,6 +13,7 @@ src = [
   'g_combat.cpp',
   'g_func.cpp',
   'g_items.cpp',
+  'g_l10n.cpp',
   'g_main.cpp',
   'g_misc.cpp',
   'g_monster.cpp',
@@ -29,9 +30,9 @@ src = [
   'm_arachnid.cpp',
   'm_berserk.cpp',
   'm_boss2.cpp',
+  'm_boss3.cpp',
   'm_boss31.cpp',
   'm_boss32.cpp',
-  'm_boss3.cpp',
   'm_brain.cpp',
   'm_chick.cpp',
   'm_flipper.cpp',
