--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,7 +107,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y meson libfmt-dev libjsoncpp-dev
+          sudo apt-get install -y meson libfmt-dev libjsoncpp-dev zlib1g-dev
 
       - name: Build
         run: |
