Set ‘deathmatch’ to 0 by default.

--- a/etc/default.cfg
+++ b/etc/default.cfg
@@ -45,6 +45,7 @@ alias newgame_n64 "killserver; deathmatch 0; maxclients 1; map q64/rtest"
 
 alias dedicated_start "map base1"
 
+set deathmatch 0
 set ui_open 1
 set intensity 1
 set gl_modulate 2
