Initial variable server FPS support.

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,1 +1,2 @@
 option('zlib', type: 'feature', value: 'auto', description: 'zlib support')
+option('variable-fps', type: 'boolean', value: 'false', description: 'Variable server FPS support')
