--- a/etc/default.cfg
+++ b/etc/default.cfg
@@ -53,3 +53,5 @@ set gl_glowmap_intensity 1
 set gl_doublelight_entities 0
 set gl_bilerp_pics 0
 set gl_beamstyle 1
+set gl_waterwarp 1
+set gl_cubemaps 1
