Add menu track to config.

--- a/etc/default.cfg
+++ b/etc/default.cfg
@@ -47,6 +47,7 @@ alias dedicated_start "map base1"
 
 set deathmatch 0
 set ui_open 1
+set ogg_menu_track 77
 set intensity 1
 set gl_modulate 2
 set gl_glowmap_intensity 1
